# rusty-probe-firmware

./: .gitignore  Cargo.toml  README.md  pulseview-adapter.sr  restart.sh  run.sh  rust-toolchain.toml
.cargo/: config.toml
.helix/: languages.toml
production-binary/: app.uf2
src/: dap.rs  device_signature.rs  leds.rs  lib.rs  pio.rs  setup.rs  swd.pio  swj_sequence.pio  systick_delay.rs  uart.rs  usb.rs
uart-test/: Cargo.toml
uart-test/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
