[package]
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
edition = "2021"
name = "pico-probe"
version = "0.1.0"

[dependencies]
bitflags = "1.3.2"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
rtic = { git = "https://github.com/rtic-rs/rtic.git", branch = "master", features= ["thumbv6-backend"] }
rtic-monotonics = { git = "https://github.com/rtic-rs/rtic.git", branch = "master", features = ["rp2040", "cortex-m-systick"] }
defmt = { version = "0.3.2", features = ["encoding-rzcobs"] }
embedded-hal = { version = "0.2.5", features = ["unproven"] }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
replace_with = { version = "0.1.7", default-features = false, features = ["panic_abort"] }
usb-device = "0.2.9"
usbd-serial = "0.1.1"
dap-rs = { git = "https://github.com/korken89/dap-rs.git", features = ["defmt"] }
git-version = "0.3.5"
pio-proc = "0.2.1"
pio = "0.2.1"

# If you're not going to use a Board Support Package you'll need these:
rp2040-hal = { version = "0.7.0", features = ["rt"] }
rp2040-boot2 = "0.2.1"

defmt-rtt = { version = "0.4.0", optional = true }
defmt-bbq = { version = "0.1.0", optional = true }
# We don't need bbqueue directly, but we need to activate the
# thumbv6 feature on it so it will compile.
bbqueue = { version = "0.5", features = ["thumbv6"], optional = true }

[features]
default = [ "defmt-rtt" ]
defmt-bbq = ["dep:defmt-bbq", "dep:bbqueue"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
